fixed all document tests, minor reformatting